examples/bad/hold_match_break_outer.mko
// EXPECT: use of moved
// Match arm moves hold then break outer — post-loop use is use-after-move.
fn consume(t: string) {}

fn main() {
    hold let s = "hi"
    let mut n = 0
    outer: while n < 1 {
        n = n + 1
        match 1 {
            0 => { },
            _ => {
                consume(s)
                break outer
            },
        }
    }
    print(s)
}
